# toggl-sherpa

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
.openclaw/: status.json
docs/: ROADMAP.md  STATUS.md  WORKLOG.md
extension/: manifest.json  service_worker.js
src/toggl_sherpa/: __init__.py  cli.py
src/toggl_sherpa/m1/: daemon.py  db.py  gnome.py  logger.py  paths.py
src/toggl_sherpa/m2/: __init__.py  redaction.py  tab_ingest.py  tab_server.py
src/toggl_sherpa/m3/: __init__.py  model.py  query.py  report.py  suggest.py  summarise.py
src/toggl_sherpa/m4/: __init__.py  apply.py  review.py
src/toggl_sherpa/m5/: __init__.py  apply.py  toggl_api.py
src/toggl_sherpa/m6/: __init__.py  config.py  idempotency.py  ledger.py
tests/: test_cli.py  test_gnome.py  test_m14_report_review_out_dir.py  test_m17_config_show.py  test_m19_toggl_workspaces.py  test_m20_toggl_projects.py  test_m21_toggl_tags.py  test_m23_toggl_clients.py  test_m2_tab_ingest.py  test_m3_report.py  test_m3_summarise.py  test_m4_happy_path_workflow.py  test_m4_review_cli.py  test_m5_apply_cli.py  test_m6_idempotent_apply.py  test_m6_ledger_cli.py  test_m6_mapping.py  test_m8_day_cli.py
