[project]
name = "toggl-sherpa"
version = "0.1.0"
description = "Local activity logger + draft timesheet + approval gate for pushing entries to Toggl Track."
readme = "README.md"
authors = [
    { name = "OJWatson" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
toggl-sherpa = "toggl_sherpa.cli:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
